[gd_scene load_steps=12 format=3 uid="uid://dc872yaqf27od"]

[ext_resource type="Script" path="res://scene/front-page/front-page.gd" id="1_wcwwk"]
[ext_resource type="Texture2D" uid="uid://b7wtd0el5vcwf" path="res://assets/image/logo.png" id="2_e4gbp"]
[ext_resource type="Texture2D" uid="uid://byr13alrwpu1t" path="res://assets/image/character_showcase.png" id="3_gweio"]
[ext_resource type="Texture2D" uid="uid://qmt6dxy82xsw" path="res://assets/ui/menu.png" id="4_4klvt"]
[ext_resource type="Theme" uid="uid://2fiw1auuiywe" path="res://theme/universal-ui.tres" id="5_r7rdq"]

[sub_resource type="Gradient" id="Gradient_be6ko"]
colors = PackedColorArray(0.184314, 0.501961, 0.929412, 1, 0.337255, 0.8, 0.94902, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mk2n6"]
gradient = SubResource("Gradient_be6ko")
fill_from = Vector2(0.521368, 1)
fill_to = Vector2(0.521368, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pg4hp"]
texture = SubResource("GradientTexture2D_mk2n6")

[sub_resource type="Animation" id="Animation_41jes"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(400, 191)]
}

[sub_resource type="Animation" id="Animation_dfxfa"]
resource_name = "logo_dancing"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Logo:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(400, 191), Vector2(400, 222)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4mtpr"]
_data = {
"RESET": SubResource("Animation_41jes"),
"logo_dancing": SubResource("Animation_dfxfa")
}

[node name="front-page" type="Node2D"]
script = ExtResource("1_wcwwk")

[node name="Panel" type="Panel" parent="."]
offset_right = 1366.0
offset_bottom = 768.0
theme_override_styles/panel = SubResource("StyleBoxTexture_pg4hp")

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(400, 191)
scale = Vector2(0.458333, 0.458333)
texture = ExtResource("2_e4gbp")

[node name="CharacterShowcase" type="Sprite2D" parent="."]
position = Vector2(1021, 396)
scale = Vector2(0.400356, 0.400356)
texture = ExtResource("3_gweio")

[node name="Menu" type="Sprite2D" parent="."]
position = Vector2(396, 516)
scale = Vector2(0.560862, 0.560862)
texture = ExtResource("4_4klvt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 267.0
offset_top = 422.0
offset_right = 530.0
offset_bottom = 607.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="start_btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../exit_btn")
theme = ExtResource("5_r7rdq")
text = "Start
"

[node name="credit_btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_r7rdq")
text = "Credit"

[node name="exit_btn" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../start_btn")
theme = ExtResource("5_r7rdq")
text = "Exit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4mtpr")
}

[connection signal="pressed" from="VBoxContainer/start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/credit_btn" to="." method="_on_credit_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/exit_btn" to="." method="_on_exit_btn_pressed"]
